k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nl2sparql-api
spec:
  selector:
    app: nl2sparql-api
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
