k8s/graphdb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: graphdb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: graphdb
  ports:
  - name: http
    port: 7200
    targetPort: 7200
  - name: cluster
    port: 5721
    targetPort: 5721
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: graphdb-headless
  labels:
    app: graphdb
spec:
  clusterIP: None
  ports:
  - name: http
    port: 7200
    targetPort: 7200
  - name: cluster
    port: 5721
    targetPort: 5721
  selector:
    app: graphdb
