k8s/qdrant-service.yml
apiVersion: v1
kind: Service
metadata:
  name: qdrant
  labels:
    app: qdrant
spec:
  ports:
  - port: 6333
    name: http
    targetPort: 6333
  - port: 6334
    name: grpc
    targetPort: 6334
  selector:
    app: qdrant
  type: ClusterIP
